# Advanced-Compiler

./: .gitignore  README.md
Dead-Store-Elimination/: ReadME.md
Dead-Store-Elimination/DeadStoreElimination/: DeadStoreE.cpp
Dead-Store-Elimination/dylibs/: libMemorySSADSE.dylib
Final_Project/: CMakeLists.txt  ReadME.md
Final_Project/benchmarks/: runPolyBench.py  runTests.sh
Final_Project/benchmarks/testSuite/irfiles/: base.ll  constFold.ll  multiUse.ll  negate.ll  noContract.ll
Final_Project/benchmarks/testSuite/testFiles/: base.c  constFold.c  multiUse.c  negate.c  noContract.c
Final_Project/benchmarks/testSuite/transformedIR/: base_opt.ll  constFold_opt.ll  multiUse_opt.ll  negate_opt.ll  noContract_opt.ll
Final_Project/pass/: pass.cpp
LLVM_Exercise/: ReadME.md
LLVM_Exercise/def_useLoop/: ReadME.md
LLVM_Exercise/inputs/: gcd.c
LLVM_assignment1/: ReadME.md
LLVM_assignment1/Induction/: ReadME.md
LLVM_assignment1/Induction/derivedIndc/: CMakeLists.txt
LLVM_assignment1/Induction/derivedIndc/output/: case1.ll  case2.ll  max_derived.ll
LLVM_assignment1/Induction/derivedIndc/tests/: testcase1.c  testcase1.ll  testcase1_canonical.ll  testcase2.c  testcase2.ll  testcase2_canonical.ll
LLVM_assignment1/SimpleLICM/: CMakeLists.txt  ReadME.md
assignment1/: README.md  cfg_analyses.py  cfg_construct.py  cfg_driver.py
assignment1/test/: testcase1.bril  testcase2.bril  testcase3.bril  testcase4.bril  testcase5.bril  testcase6.bril
assignment2/: ReadME.md  task3_4.py
deep_learningCompiler/: .gitignore  ReadME.md  generate_ir.py
(+43 files in other folders)
